--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="server_id_hint">输入监控器ID</string>
     <string name="add_server_btn">添加</string>
     <string name="add_server_scan_btn">扫码</string>
+    <string name="loading_server">正在建立连接</string>
 </resources>
