--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="add_server_btn">添加</string>
     <string name="add_server_scan_btn">扫码</string>
     <string name="loading_server">正在建立连接</string>
+
+    <string name="torch_status_info">灯光状态：%1$s</string>
+    <string name="on">开</string>
+    <string name="off">关</string>
 </resources>
