--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="add_server_btn">添加</string>
     <string name="add_server_scan_btn">扫码</string>
     <string name="loading_server">正在建立连接</string>
+    <string name="unknown_command">未知命令</string>
 </resources>
